--- a/package.json
+++ b/package.json
@@ -2,13 +2,31 @@
   "name": "test-mongoose",
   "version": "1.0.0",
   "description": "Test repo for a mongoose connector to pass to the express app",
-  "main": "index.js",
+  "main": "./build@7index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "dev": "nodemon ./src/index.ts"
   },
   "keywords": [
     "mongoose"
   ],
   "author": "Tom Johnsen",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tom-johnsen/test-mongoose.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tom-johnsen/test-mongoose/issues"
+  },
+  "homepage": "https://github.com/tom-johnsen/test-mongoose#readme",
+  "dependencies": {
+    "mongoose": "^5.0.0",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.13"
+  }
 }
