--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/tom-johnsen/test-mongoose#readme",
   "dependencies": {
-    "mongoose": "^5.0.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http-errors": "^2.0.0",
+    "mongoose": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.13"
+    "@types/express": "4.17.13",
+    "@types/http-errors": "^1.8.2"
   }
 }
