--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.13",
-    "@types/http-errors": "^1.8.2"
+    "@types/http-errors": "^1.8.2",
+    "dotenv": "^16.0.1"
   }
 }
