--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "homepage": "https://github.com/tom-johnsen/test-mongoose#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "helmet": "^5.1.0",
     "http-errors": "^2.0.0",
     "mongoose": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
     "dotenv": "^16.0.1"
   }
